tests/marouter/errors/format/vm/vm_time_one_missing/input_od_vm.fma
$VMR
* vehicle type
4
* From-Time  To-Time
0.00
* Factor
1.00
*
* some
* additional
* comments
* District number
2
* names:
         1          2
*
* District 1 Sum = 100
         0          100
* District 2 Sum = 0
         0          0
